Fixed z-index on sidebar icons

--- a/src/app/ubs/ubs-user/ubs-user-orders-list/ubs-user-orders-list.component.scss
+++ b/src/app/ubs/ubs-user/ubs-user-orders-list/ubs-user-orders-list.component.scss
@@ -307,11 +307,8 @@
   }
 
   .mat-content-wrapper {
-    column-gap: unset;
-  }
-
-  .mat-content-wrapper {
     grid-template-columns: repeat(3, 82px);
+    column-gap: unset;
   }
 
   .header_list {
